# openharmony-skills

./: .gitattributes  .gitignore  OpenHarmony-Skills-Namespace-and-Placement-Spec.md  README.md  openharmony-skills-namespace-and-placement-spec.md  openharmony-skills-website-metadata-spec.md
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
ohos-app-build-debug/: MANIFEST.in  README.md  requirements.txt  skill.md
ohos-app-build-debug/ohos_app_build_debug/: __init__.py
skills/: README.md
skills/OH_XTS_GENERATOR_TEMPLATE/: CHANGELOG.md  README.md  SKILL.md  skill_config.json
skills/afwk-hb-build/: SKILL.md
skills/ai-feedback-collector/: SKILL.md
skills/ai-feedback-collector-zh/: SKILL.md
skills/api-doc-checker/: SKILL.md
skills/appmgr-api-generator/: SKILL.md
skills/arkts-static-spec/: README.md  SKILL.md
skills/arkui-api-design/: README.md  SKILL.md
skills/arkui-menu-debug/: README.md  SKILL.md  quick_reference.md
skills/arkuix-module-adapter/: SKILL.md  config.json
skills/arkweb-app-debug/: CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  arkweb-app-debug  setup.py  skill.json  skill.md  start-debug.bat  start-debug.py
skills/arkweb-build/: README.md  SKILL.md
skills/arkweb-thread-safety-review/: SKILL.md
skills/audio_pr_create/: SKILL.md
skills/build-error-analyzer/: README.md
skills/build-fix/: SKILL.md
skills/check-test-code-quality/: README.md  SKILL.md  skill_config.json
skills/cli-from-innerkits/: SKILL.md
skills/code-generator/: SKILL.md
skills/code-problem-analyzer/: SKILL.md
skills/common/: README.md
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-1/capi-newproject-zlib/with_skill/outputs/ActsZlibCapiApiTest/: BUILD.gn  Test.json
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-1/capi-newproject-zlib/with_skill/outputs/ActsZlibCapiApiTest/entry/src/main/cpp/: CMakeLists.txt  NapiTest.cpp
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-1/capi-newproject-zlib/with_skill/outputs/ActsZlibCapiApiTest/entry/src/main/cpp/types/libentry/: index.d.ts
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-1/capi-newproject-zlib/with_skill/outputs/ActsZlibCapiApiTest/entry/src/ohosTest/ets/test/: List.test.ets  ZlibCapiApi.test.ets
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-1/capi-newproject-zlib/with_skill/outputs/ActsZlibCapiApiTest/signature/: openharmony.p7b
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-2/capi-newproject-zlib/without_skill/outputs/outputs/ActsZlibCapiTest/: BUILD.gn  build-profile.json5
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-2/capi-newproject-zlib/without_skill/outputs/outputs/ActsZlibCapiTest/AppScope/: app.json5
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-2/capi-newproject-zlib/without_skill/outputs/outputs/ActsZlibCapiTest/entry/: build-profile.json5
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-2/capi-newproject-zlib/without_skill/outputs/outputs/ActsZlibCapiTest/entry/src/main/: module.json5
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-2/capi-newproject-zlib/without_skill/outputs/outputs/ActsZlibCapiTest/entry/src/main/cpp/: CMakeLists.txt
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-2/capi-newproject-zlib/without_skill/outputs/outputs/ActsZlibCapiTest/entry/src/main/ets/entryability/: EntryAbility.ts
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-2/capi-newproject-zlib/without_skill/outputs/outputs/ActsZlibCapiTest/entry/src/ohosTest/: module.json5
skills/common/testing/ohos-test-capi-xts-generation/evals/workspace/iteration-2/capi-newproject-zlib/without_skill/outputs/outputs/ActsZlibCapiTest/entry/src/ohosTest/ets/testability/: TestAbility.ets
skills/common/testing/ohos-test-capi-xts-generation/template_project/capi_test_template/: BUILD.gn  hvigorfile.ts
skills/common/testing/ohos-test-capi-xts-generation/template_project/capi_test_template/entry/: hvigorfile.ts  oh-package.json5
skills/common/testing/ohos-test-capi-xts-generation/template_project/capi_test_template/entry/src/main/cpp/: NapiTest.cpp
skills/common/testing/ohos-test-capi-xts-generation/template_project/capi_test_template/entry/src/main/cpp/types/libentry/: index.d.ts
skills/common/testing/ohos-test-capi-xts-generation/template_project/capi_test_template/entry/src/main/ets/entryability/: EntryAbility.ts
skills/common/testing/ohos-test-capi-xts-generation/template_project/capi_test_template/entry/src/main/ets/pages/: Index.ets
skills/common/testing/ohos-test-capi-xts-generation/template_project/capi_test_template/entry/src/ohosTest/ets/test/: List.test.ets
skills/common/testing/ohos-test-capi-xts-generation/template_project/capi_test_template/entry/src/ohosTest/ets/testability/pages/: Index.ets
skills/common/testing/ohos-test-ut-generation/examples/: build-template.gn
skills/compile-analysis/: README.md
skills/comprehensive-code-review/: README.md  SKILL.md
skills/create-pr/: SKILL.md
skills/design-doc-generator/: SKILL.md
skills/domain/: README.md
skills/dsoftbus-security/: SKILL.md
skills/ets-runtime-dev/: .clang-format  SKILL.md  ets_runtime.md  format.sh  mistakes.md  plan-template.md  review.md  states.md  tasks-template.md
skills/flash-dayu200/: SKILL.md  download_daily.py  flash_dayu200.py  flash_device.py
skills/flash_daily_dayu200/: SKILL.md
skills/format/: SKILL.md
skills/gitcode-cli/: SKILL.md  gitcode-pr-workflow.md
skills/oh-capi-xts-gen/template_project/capi_test_template/entry/src/main/cpp/: CMakeLists.txt
skills/ohos-test-fuzz-generation/evals/files/configs/build_gn/: build_gn_good.gn
standard/: openharmony-agent-skill-practice-guide.md
tests/: test_device_image_flashing.py  test_flash_dayu200.py  test_gitcode_cli_docs.py  test_ohos_callgraph.py
(+2489 files in other folders)
