# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

ohos_app_assist_suite("{SUIT_NAME}_assist") {
  testonly = true
  certificate_profile = "./signature/openharmony.p7b"
  hap_name = "{SUIT_NAME}_assist"

  part_name = "{PART_NAME}"

  subsystem_name = "{SUBSYSTEM_NAME}"
}

ohos_js_app_suite("{SUIT_NAME}") {
  test_hap = true
  testonly = true
  certificate_profile = "./signature/openharmony.p7b"
  hap_name = "{SUIT_NAME}"

  part_name = "{PART_NAME}"

  subsystem_name = "{SUBSYSTEM_NAME}"
  deps = [ ":{SUIT_NAME}_assist" ]
}
