# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "display/hdi_backend"

ohos_fuzztest("HdiScreenFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//foundation/display/hdi_backend/fuzztest/hdiscreen_fuzzer"
  include_dirs = [
    "//foundation/display/hdi_backend/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "hdiscreen_fuzzer.cpp" ]
  deps = [
    "//foundation/display/hdi_backend:hdi_screen",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":HdiScreenFuzzTest" ]
}
